# embedder

./: .gitmodules  README.md
libs/: links.json
libs/js/: libqjs.so.0  qjs.lib
libs/lua/: LICENSE  lua.hpp  lua.lib
src/: CHelpers.h  Config.h  Context.cpp  Context.h  ContextKinds.h  Embedder.h  Engine.h  Exception.h  GarbageCollector.cpp  GarbageCollector.h  Helpers.h  Stack.h  Value.h
src/dotnet/: dynlib.cpp  dynlib.h  host.cpp  host.h  invoker.cpp  invoker.h  strconv.cpp  strconv.h
src/engine/: class_data.cpp  class_members.cpp  classes.cpp  classes.h  functions.cpp  functions.h  functions_context.cpp  variables.cpp
src/internal/: CHelpers.h  Context.cpp  Context.h  Exception.h  GarbageCollector.cpp  GarbageCollector.h  Helpers.cpp  Helpers.h  Invoker.h  Namespace.cpp  Namespace.h  Stack.h  Value.h
tests/: 3_value.cpp  4_classes.cpp  5_proxies.cpp  CMakeLists.txt  contexts.cpp  namespaces.cpp  run.sh  value.cpp
